@@ -1,3 +1,6 @@
+22 March 2013: Wouter
+	- Fix resolve of names that use a mix of public and private addresses.
+
 21 March 2013: Wouter
 	- release 1.4.20
 	- trunk has 1.4.21
